src/grammers/.antlr/MiniTemplateParser.java
// Generated from c://Users//sait//Desktop//compiler//Flask-Jinja-compiler//src//grammers//MiniTemplateParser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class MiniTemplateParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		H1_START=1, NAV_START=2, FOOTER_START=3, MAIN_START=4, SECTION_START=5, 
		HEADER_START=6, P_START=7, DIV_START=8, INPUT_START=9, BUTTON_START=10, 
		FORM_START=11, UL_START=12, LI_START=13, A_START=14, STYLE_START=15, VAR_START=16, 
		BLOCK_START=17, COMMENT=18, NEWLINE=19, TEXT=20, WS=21, HTML_CONTENT_H1_START=22, 
		HTML_CONTENT_HEADER_START=23, HTML_CONTENT_MAIN_START=24, HTML_CONTENT_FOOTER_START=25, 
		HTML_CONTENT_SECTION_START=26, HTML_CONTENT_NAV_START=27, HTML_CONTENT_P_START=28, 
		HTML_CONTENT_DIV_START=29, HTML_CONTENT_INPUT_START=30, HTML_CONTENT_BUTTON_START=31, 
		HTML_CONTENT_FORM_START=32, HTML_CONTENT_UL_START=33, HTML_CONTENT_LI_START=34, 
		HTML_CONTENT_A_START=35, HTML_CONTENT_VAR_START=36, HTML_CONTENT_BLOCK_START=37, 
		HTML_CONTENT_COMMENT=38, HTML_CONTENT_TEXT=39, HTML_CONTENT_NEWLINE=40, 
		HTML_CONTENT_WS=41, H1_END=42, HEADER_END=43, MAIN_END=44, FOOTER_END=45, 
		NAV_END=46, SECTION_END=47, P_END=48, DIV_END=49, BUTTON_END=50, FORM_END=51, 
		UL_END=52, LI_END=53, A_END=54, HTML_ATTR_EQUALS=55, HTML_ATTR_SINGLE_QUOTE=56, 
		HTML_ATTR_DOUBLE_QUOTE=57, HTML_ATTR_VAR_START=58, HTML_ATTR_BLOCK_START=59, 
		HTML_ATTR_IDENT=60, HTML_ATTR_WS=61, HTML_ATTR_GT=62, HTML_ATTR_VALUE_COMMENT=63, 
		HTML_ATTR_VALUE_TEXT=64, HTML_ATTR_VALUE_VAR_START=65, HTML_ATTR_VALUE_BLOCK_START=66, 
		HTML_ATTR_VALUE_DOUBLE_QUOTE=67, CSS_IDENT=68, CSS_TAG=69, CSS_STAR=70, 
		CSS_HASH=71, CSS_GT=72, CSS_PLUS=73, CSS_GEN_SIB=74, CSS_LPAREN=75, CSS_RPAREN=76, 
		CSS_PSEUDO_COLON=77, CSS_PSEUDO_DOUBLE_COLON=78, CSS_COMMA=79, CSS_DOT=80, 
		CSS_LBRACE=81, CSS_COMMENT=82, CSS_NUMBER=83, CSS_NEWLINE=84, CSS_WS=85, 
		CSS_STYLE_END=86, CSS_RULE_COLON=87, CSS_RULE_COMMENT=88, CSS_RULE_IDENT=89, 
		CSS_RULE_WS=90, CSS_RULE_RBRACE=91, CSS_VALUE_VAR_START=92, CSS_VALUE_LPAREN=93, 
		CSS_VALUE_RPAREN=94, CSS_VALUE_MINUS=95, CSS_VAR_PREFIX=96, CSS_VALUE_PLUS=97, 
		CSS_VALUE_COMMA=98, CSS_VALUE_COMMENT=99, CSS_VALUE_STRING=100, CSS_VALUE_NUMBER=101, 
		CSS_VALUE_COLOR=102, CSS_VALUE_UNIT=103, CSS_VALUE_IDENT=104, CSS_VALUE_END=105, 
		CSS_VALUE_WS=106, JINJA_NONE=107, JINJA_TRUE=108, JINJA_FALSE=109, JINJA_APP=110, 
		JINJA_IF=111, JINJA_ELIF=112, JINJA_ELSE=113, JINJA_ENDIF=114, JINJA_FOR=115, 
		JINJA_ENDFOR=116, JINJA_IN=117, JINJA_EQEQ=118, JINJA_PLUS=119, JINJA_DOT=120, 
		JINJA_LBRACK=121, JINJA_RBRACK=122, JINJA_LPAREN=123, JINJA_RPAREN=124, 
		JINJA_LBRACE=125, JINJA_RBRACE=126, JINJA_COMMA=127, JINJA_EQUALS=128, 
		JINJA_COLON=129, JINJA_COMMENT=130, JINJA_STRING=131, JINJA_NUMBER=132, 
		JINJA_IDENT=133, JINJA_WS=134, JINJA_NEWLINE=135, JINJA_BLOCK_END=136, 
		JINJA_VAR_END=137, CSS_STRING=138, CSS_MINUS=139;
	public static final int
		RULE_template = 0, RULE_element = 1, RULE_text = 2, RULE_htmlTag = 3, 
		RULE_tagWithContent = 4, RULE_h1Tag = 5, RULE_h1Start = 6, RULE_divTag = 7, 
		RULE_divStart = 8, RULE_headerTag = 9, RULE_headerStart = 10, RULE_mainTag = 11, 
		RULE_mainStart = 12, RULE_footerTag = 13, RULE_footerStart = 14, RULE_navTag = 15, 
		RULE_navStart = 16, RULE_sectionTag = 17, RULE_sectionStart = 18, RULE_pTag = 19, 
		RULE_pStart = 20, RULE_inputTag = 21, RULE_inputStart = 22, RULE_buttonTag = 23, 
		RULE_buttonStart = 24, RULE_formTag = 25, RULE_formStart = 26, RULE_ulTag = 27, 
		RULE_ulStart = 28, RULE_liTag = 29, RULE_liStart = 30, RULE_aTag = 31, 
		RULE_aStart = 32, RULE_attr = 33, RULE_quotedValue = 34, RULE_quotedItem = 35, 
		RULE_styleTag = 36, RULE_cssRules = 37, RULE_cssRule = 38, RULE_cssDeclarationList = 39, 
		RULE_cssDeclaration = 40, RULE_cssProperty = 41, RULE_cssValue = 42, RULE_cssFunction = 43, 
		RULE_cssSelectorList = 44, RULE_cssSelector = 45, RULE_selectorUnit = 46, 
		RULE_baseSelectorPart = 47, RULE_classPart = 48, RULE_idPart = 49, RULE_combinator = 50, 
		RULE_pseudoClass = 51, RULE_pseudoArgs = 52, RULE_pseudoExpr = 53, RULE_pseudoExprAtom = 54, 
		RULE_pseudoElement = 55, RULE_jinjaVar = 56, RULE_varStart = 57, RULE_jinjaBlock = 58, 
		RULE_jinjaFor = 59, RULE_jinjaIf = 60, RULE_blockStart = 61, RULE_expr = 62, 
		RULE_additive = 63, RULE_primary = 64, RULE_suffix = 65, RULE_routeArgKws = 66, 
		RULE_arg = 67, RULE_atom = 68, RULE_listLiteral = 69, RULE_dictLiteral = 70, 
		RULE_pair = 71, RULE_genExpr = 72;
	private static String[] makeRuleNames() {
		return new String[] {
			"template", "element", "text", "htmlTag", "tagWithContent", "h1Tag", 
			"h1Start", "divTag", "divStart", "headerTag", "headerStart", "mainTag", 
			"mainStart", "footerTag", "footerStart", "navTag", "navStart", "sectionTag", 
			"sectionStart", "pTag", "pStart", "inputTag", "inputStart", "buttonTag", 
			"buttonStart", "formTag", "formStart", "ulTag", "ulStart", "liTag", "liStart", 
			"aTag", "aStart", "attr", "quotedValue", "quotedItem", "styleTag", "cssRules", 
			"cssRule", "cssDeclarationList", "cssDeclaration", "cssProperty", "cssValue", 
			"cssFunction", "cssSelectorList", "cssSelector", "selectorUnit", "baseSelectorPart", 
			"classPart", "idPart", "combinator", "pseudoClass", "pseudoArgs", "pseudoExpr", 
			"pseudoExprAtom", "pseudoElement", "jinjaVar", "varStart", "jinjaBlock", 
			"jinjaFor", "jinjaIf", "blockStart", "expr", "additive", "primary", "suffix", 
			"routeArgKws", "arg", "atom", "listLiteral", "dictLiteral", "pair", "genExpr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "'<style>'", null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "'</h1>'", "'</header>'", "'</main>'", 
			"'</footer>'", "'</nav>'", "'</section>'", "'</p>'", "'</div>'", "'</button>'", 
			"'</form>'", "'</ul>'", "'</li>'", "'</a>'", null, "'''", null, null, 
			null, null, null, null, null, null, null, null, null, null, null, "'*'", 
			"'#'", null, null, "'~'", null, null, null, "'::'", null, null, null, 
			null, null, null, null, "'</style>'", null, null, null, null, null, null, 
			null, null, "'-'", "'--'", null, null, null, null, null, null, null, 
			null, "';'", null, "'None'", "'True'", "'False'", "'app'", "'if'", "'elif'", 
			"'else'", "'endif'", "'for'", "'endfor'", "'in'", "'=='", null, null, 
			"'['", "']'", null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "'%}'", "'}}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "H1_START", "NAV_START", "FOOTER_START", "MAIN_START", "SECTION_START", 
			"HEADER_START", "P_START", "DIV_START", "INPUT_START", "BUTTON_START", 
			"FORM_START", "UL_START", "LI_START", "A_START", "STYLE_START", "VAR_START", 
			"BLOCK_START", "COMMENT", "NEWLINE", "TEXT", "WS", "HTML_CONTENT_H1_START", 
			"HTML_CONTENT_HEADER_START", "HTML_CONTENT_MAIN_START", "HTML_CONTENT_FOOTER_START", 
			"HTML_CONTENT_SECTION_START", "HTML_CONTENT_NAV_START", "HTML_CONTENT_P_START", 
			"HTML_CONTENT_DIV_START", "HTML_CONTENT_INPUT_START", "HTML_CONTENT_BUTTON_START", 
			"HTML_CONTENT_FORM_START", "HTML_CONTENT_UL_START", "HTML_CONTENT_LI_START", 
			"HTML_CONTENT_A_START", "HTML_CONTENT_VAR_START", "HTML_CONTENT_BLOCK_START", 
			"HTML_CONTENT_COMMENT", "HTML_CONTENT_TEXT", "HTML_CONTENT_NEWLINE", 
			"HTML_CONTENT_WS", "H1_END", "HEADER_END", "MAIN_END", "FOOTER_END", 
			"NAV_END", "SECTION_END", "P_END", "DIV_END", "BUTTON_END", "FORM_END", 
			"UL_END", "LI_END", "A_END", "HTML_ATTR_EQUALS", "HTML_ATTR_SINGLE_QUOTE", 
			"HTML_ATTR_DOUBLE_QUOTE", "HTML_ATTR_VAR_START", "HTML_ATTR_BLOCK_START", 
			"HTML_ATTR_IDENT", "HTML_ATTR_WS", "HTML_ATTR_GT", "HTML_ATTR_VALUE_COMMENT", 
			"HTML_ATTR_VALUE_TEXT", "HTML_ATTR_VALUE_VAR_START", "HTML_ATTR_VALUE_BLOCK_START", 
			"HTML_ATTR_VALUE_DOUBLE_QUOTE", "CSS_IDENT", "CSS_TAG", "CSS_STAR", "CSS_HASH", 
			"CSS_GT", "CSS_PLUS", "CSS_GEN_SIB", "CSS_LPAREN", "CSS_RPAREN", "CSS_PSEUDO_COLON", 
			"CSS_PSEUDO_DOUBLE_COLON", "CSS_COMMA", "CSS_DOT", "CSS_LBRACE", "CSS_COMMENT", 
			"CSS_NUMBER", "CSS_NEWLINE", "CSS_WS", "CSS_STYLE_END", "CSS_RULE_COLON", 
			"CSS_RULE_COMMENT", "CSS_RULE_IDENT", "CSS_RULE_WS", "CSS_RULE_RBRACE", 
			"CSS_VALUE_VAR_START", "CSS_VALUE_LPAREN", "CSS_VALUE_RPAREN", "CSS_VALUE_MINUS", 
			"CSS_VAR_PREFIX", "CSS_VALUE_PLUS", "CSS_VALUE_COMMA", "CSS_VALUE_COMMENT", 
			"CSS_VALUE_STRING", "CSS_VALUE_NUMBER", "CSS_VALUE_COLOR", "CSS_VALUE_UNIT", 
			"CSS_VALUE_IDENT", "CSS_VALUE_END", "CSS_VALUE_WS", "JINJA_NONE", "JINJA_TRUE", 
			"JINJA_FALSE", "JINJA_APP", "JINJA_IF", "JINJA_ELIF", "JINJA_ELSE", "JINJA_ENDIF", 
			"JINJA_FOR", "JINJA_ENDFOR", "JINJA_IN", "JINJA_EQEQ", "JINJA_PLUS", 
			"JINJA_DOT", "JINJA_LBRACK", "JINJA_RBRACK", "JINJA_LPAREN", "JINJA_RPAREN", 
			"JINJA_LBRACE", "JINJA_RBRACE", "JINJA_COMMA", "JINJA_EQUALS", "JINJA_COLON", 
			"JINJA_COMMENT", "JINJA_STRING", "JINJA_NUMBER", "JINJA_IDENT", "JINJA_WS", 
			"JINJA_NEWLINE", "JINJA_BLOCK_END", "JINJA_VAR_END", "CSS_STRING", "CSS_MINUS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MiniTemplateParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MiniTemplateParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TemplateContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(MiniTemplateParser.EOF, 0); }
		public List<ElementContext> element() {
			return getRuleContexts(ElementContext.class);
		}
		public ElementContext element(int i) {
			return getRuleContext(ElementContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(MiniTemplateParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(MiniTemplateParser.NEWLINE, i);
		}
		public TemplateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_template; }
	}

	public final TemplateContext template() throws RecognitionException {
		TemplateContext _localctx = new TemplateContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_template);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 864691953085972478L) != 0) || ((((_la - 65)) & ~0x3f) == 0 && ((1L << (_la - 65)) & 134217731L) != 0)) {
				{
				{
				setState(146);
				element();
				setState(150);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NEWLINE) {
					{
					{
					setState(147);
					match(NEWLINE);
					}
					}
					setState(152);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(157);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(158);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ElementContext extends ParserRuleContext {
		public ElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_element; }
	 
		public ElementContext() { }
		public void copyFrom(ElementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TemplateHtmlElementContext extends ElementContext {
		public HtmlTagContext htmlTag() {
			return getRuleContext(HtmlTagContext.class,0);
		}
		public TemplateHtmlElementContext(ElementContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TemplateJinjaVarContext extends ElementContext {
		public JinjaVarContext jinjaVar() {
			return getRuleContext(JinjaVarContext.class,0);
		}
		public TemplateJinjaVarContext(ElementContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TemplateJinjaBlockContext extends ElementContext {
		public JinjaBlockContext jinjaBlock() {
			return getRuleContext(JinjaBlockContext.class,0);
		}
		public TemplateJinjaBlockContext(ElementContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TemplateTextContext extends ElementContext {
		public TextContext text() {
			return getRuleContext(TextContext.class,0);
		}
		public TemplateTextContext(ElementContext ctx) { copyFrom(ctx); }
	}

	public final ElementContext element() throws RecognitionException {
		ElementContext _localctx = new ElementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_element);
		try {
			setState(164);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case H1_START:
			case NAV_START:
			case FOOTER_START:
			case MAIN_START:
			case SECTION_START:
			case HEADER_START:
			case P_START:
			case DIV_START:
			case INPUT_START:
			case BUTTON_START:
			case FORM_START:
			case UL_START:
			case LI_START:
			case A_START:
			case STYLE_START:
			case HTML_CONTENT_H1_START:
			case HTML_CONTENT_HEADER_START:
			case HTML_CONTENT_MAIN_START:
			case HTML_CONTENT_FOOTER_START:
			case HTML_CONTENT_SECTION_START:
			case HTML_CONTENT_NAV_START:
			case HTML_CONTENT_P_START:
			case HTML_CONTENT_DIV_START:
			case HTML_CONTENT_INPUT_START:
			case HTML_CONTENT_BUTTON_START:
			case HTML_CONTENT_FORM_START:
			case HTML_CONTENT_UL_START:
			case HTML_CONTENT_LI_START:
			case HTML_CONTENT_A_START:
				_localctx = new TemplateHtmlElementContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(160);
				htmlTag();
				}
				break;
			case VAR_START:
			case HTML_CONTENT_VAR_START:
			case HTML_ATTR_VAR_START:
			case HTML_ATTR_VALUE_VAR_START:
			case CSS_VALUE_VAR_START:
				_localctx = new TemplateJinjaVarContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(161);
				jinjaVar();
				}
				break;
			case BLOCK_START:
			case HTML_CONTENT_BLOCK_START:
			case HTML_ATTR_BLOCK_START:
			case HTML_ATTR_VALUE_BLOCK_START:
				_localctx = new TemplateJinjaBlockContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(162);
				jinjaBlock();
				}
				break;
			case TEXT:
			case HTML_CONTENT_TEXT:
				_localctx = new TemplateTextContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(163);
				text();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
